Changed a few comments in the notebooks.  Added .idea to .gitignore

--- a/SOHO_snippets.ipynb
+++ b/SOHO_snippets.ipynb
@@ -101,7 +101,11 @@
     "print(read_data_file(Path('data/hk_stof.dat'))[0].iloc[:3, :6])\n",
     "print()\n",
     "# badfile.dat does not have a line beginning with YR or Year\n",
-    "print(read_data_file(Path('data/badfile.dat'))[0].iloc[:3, :6])\n"
+    "try:\n",
+    "    read_data_file(Path('data/badfile.dat'))\n",
+    "    print('read_data_file(badfile) should not have succeeded')\n",
+    "except ValueError:\n",
+    "    print('read_data_file expected failure')\n"
    ]
   },
   {
