--- a/Voyager_snippets.ipynb
+++ b/Voyager_snippets.ipynb
@@ -101,8 +101,10 @@
    "source": [
     "def step_to_column(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Return a DataFrame containing a Step column containing the motor step and a column containing the rate data\n",
-    "    :param df: DataFrame containing rates data starting in column 2 labeled RateS0n where n is the motor step\n",
+    "    Return a DataFrame containing a Step column containing the motor step and\n",
+    "    a column containing the rate data.  There is probably a better way to do this\n",
+    "    :param df: DataFrame containing rates data starting in column 2 labeled\n",
+    "               RateS0n where n is the motor step\n",
     "    :return: DataFrame with Rate and motor step in columns 2 and 3\n",
     "    \"\"\"\n",
     "    rate = df.columns[3]\n",
@@ -121,6 +123,8 @@
     "\n",
     "\n",
     "####\n",
+    "# read singles rates files, convert to Rate & Step format and concat to make\n",
+    "# a single DataFrame with step and rates data\n",
     "(pd.concat(\n",
     "     [\n",
     "         step_to_column(read_rate_file(Path(f'data/V11999001B{rr}.CSV.GZ')))\n",
